--- a/src/components/inputs/time-input/time-input-body.mod.css
+++ b/src/components/inputs/time-input/time-input-body.mod.css
@@ -2,11 +2,14 @@
   width: 100%;
   align-items: center;
   display: flex;
+  font-size: var(--font-size-default);
+  font-family: var(--font-family-default);
 }
 
 .time-input {
   width: 100%;
   appearance: none;
+  box-sizing: border-box;
   background: var(--background-color-input-pristine);
   border-radius: var(--border-radius-input) 0 0
     var(--border-radius-input);
@@ -59,6 +62,7 @@
 
 .icon-container {
   align-items: center;
+  box-sizing: border-box;
   background-color: var(--background-color-input-pristine);
   border-bottom: 1px solid var(--border-color-input-pristine);
   border-right: 1px solid var(--border-color-input-pristine);
