--- a/src/components/internals/calendar-body/calendar-body.mod.css
+++ b/src/components/internals/calendar-body/calendar-body.mod.css
@@ -2,10 +2,13 @@
   width: 100%;
   align-items: center;
   display: flex;
+  font-size: var(--font-size-default);
+  font-family: var(--font-family-default);
 }
 
 .date-input {
   width: 100%;
+  box-sizing: border-box;
   appearance: none;
   background: var(--background-color-input-pristine);
   border-radius: var(--border-radius-input) 0 0
@@ -76,6 +79,7 @@
 
 .icon-container {
   align-items: center;
+  box-sizing: border-box;
   background-color: var(--background-color-input-pristine);
   border: 1px solid var(--border-color-input-pristine);
   height: var(--size-height-input);
