--- a/src/components/panels/collapsible-panel/collapsible-panel.mod.css
+++ b/src/components/panels/collapsible-panel/collapsible-panel.mod.css
@@ -100,18 +100,8 @@
   margin: 0 0 0 var(--spacing-16);
 }
 
-.header-title {
-  cursor: pointer;
-  margin-bottom: 0;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  flex-grow: 1;
-}
-
-.header-title-disabled {
-  composes: header-title;
-  cursor: default;
+.header-disabled {
+  cursor: not-allowed;
 }
 
 .header-icon {
@@ -123,6 +113,10 @@
   border-radius: 50%;
   flex-shrink: 0;
   box-shadow: var(--shadow-7);
+}
+
+.header-icon-disabled {
+  box-shadow: none;
 }
 
 .header-icon-small {
