--- a/materials/custom-properties.css
+++ b/materials/custom-properties.css
@@ -35,6 +35,8 @@
   --border-radius-4: 4px;
   --border-radius-6: 6px;
   --border-radius-20: 20px;
+  --font-family: 'Open Sans', sans-serif;
+  --font-size-m: 13px;
   --shadow-1: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   --shadow-2: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   --shadow-3: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
@@ -78,6 +80,8 @@
   --background-color-tag-disabled: hsl(0, 0%, 95%);
   --background-color-tag-normal-hover: hsl(0, 0%, 60%);
   --background-color-tag-warning-hover: #f16d0e;
+  --background-color-for-input: #fff;
+  --background-color-for-input-when-disabled: hsl(195, 35.2941176471%, 98%);
   --border-color-input-pristine: hsl(0, 0%, 60%);
   --border-color-input-focus: #00b39e;
   --border-color-input-disabled: #ccc;
@@ -89,8 +93,15 @@
   --border-color-tag-focus: #00b39e;
   --border-color-tag-warning-hover: #f16d0e;
   --border-color-separator: #ccc;
+  --border-color-for-input: hsl(0, 0%, 60%);
+  --border-color-for-input-when-focused: #00b39e;
+  --border-color-for-input-when-disabled: #ccc;
+  --border-color-for-input-when-readonly: #ccc;
+  --border-color-for-input-when-error: #e60050;
+  --border-color-for-input-when-warning: #f16d0e;
   --border-radius-input: 6px;
   --border-radius-tag: 2px;
+  --border-radius-for-input: 6px;
   --font-color-default: #1a1a1a;
   --font-color-disabled: hsl(0, 0%, 60%);
   --font-color-error: #e60050;
@@ -98,6 +109,12 @@
   --font-color-warning: #f16d0e;
   --font-color-readonly: hsl(0, 0%, 60%);
   --font-color-placeholder: hsl(0, 0%, 60%);
+  --font-color-for-input: #1a1a1a;
+  --font-color-for-input-when-disabled: hsl(0, 0%, 60%);
+  --font-color-for-input-when-error: #e60050;
+  --font-color-for-input-when-readonly: hsl(0, 0%, 60%);
+  --font-color-for-input-when-warning: #f16d0e;
+  --font-size-for-input: 13px;
   --shadow-box-tag-when-hovered: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   --big-button-height: 32px;
   --small-button-height: 24px;
