--- a/materials/custom-properties.css
+++ b/materials/custom-properties.css
@@ -43,11 +43,15 @@
   --shadow-4: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
   --shadow-5: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
   --shadow-6: 0 -1px 2px 0 rgba(0, 0, 0, 0.2);
-  --shadow-7: 0 -1px 1.5px 0 rgba(0, 0, 0, 0.12), 0 1px 1px 0 rgba(0, 0, 0, 0.24);
+  --shadow-7: 0 -1px 1.5px 0 rgba(0, 0, 0, 0.12),
+    0 1px 1px 0 rgba(0, 0, 0, 0.24);
   --shadow-8: 0 1px 9.5px 0 rgba(0, 0, 0, 0.12), 0 2px 4px 0 rgba(0, 0, 0, 0.24);
-  --shadow-9: inset 0 -1px 3px 0 rgba(0, 0, 0, 0.1), inset 0 1px 1.5px 0 rgba(0, 0, 0, 0.2), inset 0 1px 1.5px 0 rgba(0, 0, 0, 0.25);
+  --shadow-9: inset 0 -1px 3px 0 rgba(0, 0, 0, 0.1),
+    inset 0 1px 1.5px 0 rgba(0, 0, 0, 0.2),
+    inset 0 1px 1.5px 0 rgba(0, 0, 0, 0.25);
   --shadow-10: 0 0 0 1px rgba(224, 230, 237, 0.5);
-  --shadow-11: 0 1px 0.5px rgba(0, 0, 0, 0.24), 0 -1px 0.75px rgba(0, 0, 0, 0.12);
+  --shadow-11: 0 1px 0.5px rgba(0, 0, 0, 0.24),
+    0 -1px 0.75px rgba(0, 0, 0, 0.12);
   --shadow-12: 0 0 1px rgba(0, 0, 0, 0.25);
   --shadow-13: 0 0 1px rgba(0, 0, 0, 0.25);
   --shadow-14: 0 0 0.5px rgba(0, 0, 0, 0.1);
@@ -117,7 +121,8 @@
   --font-family: 'Open Sans', sans-serif;
   --placeholder-font-color-for-input: hsl(0, 0%, 60%);
   --font-size-for-input: 13px;
-  --shadow-box-tag-when-hovered: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  --shadow-box-tag-when-hovered: 0 1px 3px rgba(0, 0, 0, 0.12),
+    0 1px 2px rgba(0, 0, 0, 0.24);
   --big-button-height: 32px;
   --small-button-height: 24px;
   --size-height-input: 32px;
@@ -150,7 +155,8 @@
   --font-family-default: 'Open Sans', sans-serif;
   --font-size-default: 13px;
   --font-size-small: 12px;
-  --shadow-box-tag-hover: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  --shadow-box-tag-hover: 0 1px 3px rgba(0, 0, 0, 0.12),
+    0 1px 2px rgba(0, 0, 0, 0.24);
   --size-height-tag: 26px;
   --standard-input-height: 32px;
 }
