--- a/materials/custom-properties.css
+++ b/materials/custom-properties.css
@@ -30,6 +30,29 @@
   --color-purple: #b866ff;
   --color-black: #1a1a1a;
   --color-white: #fff;
+  --color-primary: #00b39e;
+  --color-primary-25: hsl(172.9608938547486, 100%, 25%);
+  --color-primary-40: hsl(172.9608938547486, 100%, 40%);
+  --color-primary-85: hsl(172.9608938547486, 100%, 85%);
+  --color-primary-95: hsl(172.9608938547486, 100%, 95%);
+  --color-dark-accent: #213c45;
+  --color-dark-accent-30: hsl(195, 35.2941176471%, 30%);
+  --color-dark-accent-40: hsl(195, 35.2941176471%, 40%);
+  --color-dark-accent-95: hsl(195, 35.2941176471%, 95%);
+  --color-dark-accent-98: hsl(195, 35.2941176471%, 98%);
+  --color-neutral: #ccc;
+  --color-neutral-60: hsl(0, 0%, 60%);
+  --color-neutral-90: hsl(0, 0%, 90%);
+  --color-neutral-95: hsl(0, 0%, 95%);
+  --color-info: #078cdf;
+  --color-info-85: hsl(203.05555555555554, 93.9130434783%, 85%);
+  --color-info-95: hsl(203.05555555555554, 93.9130434783%, 95%);
+  --color-warning: #f16d0e;
+  --color-warning-95: hsl(25.110132158590307, 89.0196078431%, 95%);
+  --color-error: #e60050;
+  --color-error-95: hsl(339.1304347826087, 100%, 95%);
+  --color-dark: #1a1a1a;
+  --color-light: #fff;
   --border-radius-1: 1px;
   --border-radius-2: 2px;
   --border-radius-4: 4px;
