--- a/materials/custom-properties.css
+++ b/materials/custom-properties.css
@@ -35,11 +35,11 @@
   --color-primary-40: hsl(172.9608938547486, 100%, 40%);
   --color-primary-85: hsl(172.9608938547486, 100%, 85%);
   --color-primary-95: hsl(172.9608938547486, 100%, 95%);
-  --color-dark-accent: #213c45;
-  --color-dark-accent-30: hsl(195, 35.2941176471%, 30%);
-  --color-dark-accent-40: hsl(195, 35.2941176471%, 40%);
-  --color-dark-accent-95: hsl(195, 35.2941176471%, 95%);
-  --color-dark-accent-98: hsl(195, 35.2941176471%, 98%);
+  --color-accent: #213c45;
+  --color-accent-30: hsl(195, 35.2941176471%, 30%);
+  --color-accent-40: hsl(195, 35.2941176471%, 40%);
+  --color-accent-95: hsl(195, 35.2941176471%, 95%);
+  --color-accent-98: hsl(195, 35.2941176471%, 98%);
   --color-neutral: #ccc;
   --color-neutral-60: hsl(0, 0%, 60%);
   --color-neutral-90: hsl(0, 0%, 90%);
@@ -51,8 +51,8 @@
   --color-warning-95: hsl(25.110132158590307, 89.0196078431%, 95%);
   --color-error: #e60050;
   --color-error-95: hsl(339.1304347826087, 100%, 95%);
-  --color-dark: #1a1a1a;
-  --color-light: #fff;
+  --color-solid: #1a1a1a;
+  --color-surface: #fff;
   --border-radius-1: 1px;
   --border-radius-2: 2px;
   --border-radius-4: 4px;
