--- a/materials/custom-properties.css
+++ b/materials/custom-properties.css
@@ -90,6 +90,11 @@
   --spacing-16: 16px;
   --spacing-24: 24px;
   --spacing-32: 32px;
+  --spacing-xs: 4px;
+  --spacing-s: 8px;
+  --spacing-m: 16px;
+  --spacing-l: 24px;
+  --spacing-xl: 32px;
   --transition-linear-80ms: 80ms linear;
   --transition-easeinout-150ms: 150ms ease-in-out;
   --transition-standard: all 0.2s ease;
