--- a/materials/custom-properties.css
+++ b/materials/custom-properties.css
@@ -113,7 +113,9 @@
   --background-color-tag-normal-hover: hsl(0, 0%, 60%);
   --background-color-tag-warning-hover: #f16d0e;
   --background-color-for-input: #fff;
+  --background-color-for-input-when-selected: hsl(195, 35.2941176471%, 95%);
   --background-color-for-input-when-disabled: hsl(195, 35.2941176471%, 98%);
+  --background-color-for-input-when-hovered: hsl(0, 0%, 90%);
   --background-color-for-tag: hsl(0, 0%, 95%);
   --background-color-for-tag-warning: hsl(
     25.110132158590307,
