--- a/materials/custom-properties.css
+++ b/materials/custom-properties.css
@@ -79,6 +79,8 @@
   --shadow-13: 0 0 1px rgba(0, 0, 0, 0.25);
   --shadow-14: 0 0 0.5px rgba(0, 0, 0, 0.1);
   --shadow-15: 0 2px 2px rgba(0, 0, 0, 0.24), 0 1px 4.75px rgba(0, 0, 0, 0.12);
+  --shadow-16: 0.5px 1.5px 4px 1px rgba(0, 0, 0, 0.25),
+    -0.5px -0.5px 4px 1px rgba(0, 0, 0, 0.25);
   --constraint-scale: 100%;
   --constraint-xs: 50px;
   --constraint-s: 132px;
