--- a/materials/custom-properties.css
+++ b/materials/custom-properties.css
@@ -6,30 +6,6 @@
 */
 
 :root {
-  --color-green: #00b39e;
-  --color-green-25: hsl(172.9608938547486, 100%, 25%);
-  --color-green-40: hsl(172.9608938547486, 100%, 40%);
-  --color-green-85: hsl(172.9608938547486, 100%, 85%);
-  --color-green-95: hsl(172.9608938547486, 100%, 95%);
-  --color-navy: #213c45;
-  --color-navy-30: hsl(195, 35.2941176471%, 30%);
-  --color-navy-40: hsl(195, 35.2941176471%, 40%);
-  --color-navy-95: hsl(195, 35.2941176471%, 95%);
-  --color-navy-98: hsl(195, 35.2941176471%, 98%);
-  --color-gray: #ccc;
-  --color-gray-60: hsl(0, 0%, 60%);
-  --color-gray-90: hsl(0, 0%, 90%);
-  --color-gray-95: hsl(0, 0%, 95%);
-  --color-blue: #078cdf;
-  --color-blue-85: hsl(203.05555555555554, 93.9130434783%, 85%);
-  --color-blue-95: hsl(203.05555555555554, 93.9130434783%, 95%);
-  --color-orange: #f16d0e;
-  --color-orange-95: hsl(25.110132158590307, 89.0196078431%, 95%);
-  --color-red: #e60050;
-  --color-red-95: hsl(339.1304347826087, 100%, 95%);
-  --color-purple: #b866ff;
-  --color-black: #1a1a1a;
-  --color-white: #fff;
   --color-primary: #00b39e;
   --color-primary-25: hsl(172.9608938547486, 100%, 25%);
   --color-primary-40: hsl(172.9608938547486, 100%, 40%);
@@ -87,11 +63,6 @@
   --constraint-m: 355px;
   --constraint-l: 496px;
   --constraint-xl: 768px;
-  --spacing-4: 4px;
-  --spacing-8: 8px;
-  --spacing-16: 16px;
-  --spacing-24: 24px;
-  --spacing-32: 32px;
   --spacing-xs: 4px;
   --spacing-s: 8px;
   --spacing-m: 16px;
@@ -99,21 +70,12 @@
   --spacing-xl: 32px;
   --transition-linear-80ms: 80ms linear;
   --transition-easeinout-150ms: 150ms ease-in-out;
-  --transition-standard: all 0.2s ease;
+  --transition-standard: 200ms ease;
   --break-point-mobile: 768px;
   --break-point-desktop: 1024px;
   --break-point-biggerdesktop: 1280px;
   --break-point-giantdesktop: 1680px;
   --break-point-jumbodesktop: 1920px;
-  --background-color-input-pristine: #fff;
-  --background-color-input-disabled: hsl(195, 35.2941176471%, 98%);
-  --background-color-input-hover: hsl(0, 0%, 90%);
-  --background-color-input-selected: hsl(195, 35.2941176471%, 95%);
-  --background-color-tag-pristine: hsl(0, 0%, 95%);
-  --background-color-tag-warning: hsl(25.110132158590307, 89.0196078431%, 95%);
-  --background-color-tag-disabled: hsl(0, 0%, 95%);
-  --background-color-tag-normal-hover: hsl(0, 0%, 60%);
-  --background-color-tag-warning-hover: #f16d0e;
   --background-color-for-input: #fff;
   --background-color-for-input-when-selected: hsl(195, 35.2941176471%, 95%);
   --background-color-for-input-when-disabled: hsl(195, 35.2941176471%, 98%);
@@ -124,17 +86,6 @@
     89.0196078431%,
     95%
   );
-  --border-color-input-pristine: hsl(0, 0%, 60%);
-  --border-color-input-focus: #00b39e;
-  --border-color-input-disabled: #ccc;
-  --border-color-input-readonly: #ccc;
-  --border-color-input-error: #e60050;
-  --border-color-input-warning: #f16d0e;
-  --border-color-tag-pristine: hsl(0, 0%, 60%);
-  --border-color-tag-warning: #f16d0e;
-  --border-color-tag-focus: #00b39e;
-  --border-color-tag-warning-hover: #f16d0e;
-  --border-color-separator: #ccc;
   --border-color-for-input: hsl(0, 0%, 60%);
   --border-color-for-input-when-focused: #00b39e;
   --border-color-for-input-when-disabled: #ccc;
@@ -144,17 +95,8 @@
   --border-color-for-tag: hsl(0, 0%, 60%);
   --border-color-for-tag-warning: #f16d0e;
   --border-color-for-tag-when-focused: #00b39e;
-  --border-radius-input: 6px;
-  --border-radius-tag: 2px;
   --border-radius-for-input: 6px;
   --border-radius-for-tag: 2px;
-  --font-color-default: #1a1a1a;
-  --font-color-disabled: hsl(0, 0%, 60%);
-  --font-color-error: #e60050;
-  --font-color-success: #00b39e;
-  --font-color-warning: #f16d0e;
-  --font-color-readonly: hsl(0, 0%, 60%);
-  --font-color-placeholder: hsl(0, 0%, 60%);
   --font-color-for-input: #1a1a1a;
   --font-color-for-input-when-disabled: hsl(0, 0%, 60%);
   --font-color-for-input-when-error: #e60050;
@@ -170,32 +112,6 @@
   --big-button-height: 32px;
   --small-button-height: 24px;
   --size-height-input: 32px;
-  --shadow-1-first: 0 1px 3px rgba(0, 0, 0, 0.12);
-  --shadow-1-second: 0 1px 2px rgba(0, 0, 0, 0.24);
-  --shadow-2-first: 0 3px 6px rgba(0, 0, 0, 0.16);
-  --shadow-2-second: 0 3px 6px rgba(0, 0, 0, 0.23);
-  --shadow-3-first: 0 10px 20px rgba(0, 0, 0, 0.19);
-  --shadow-3-second: 0 6px 6px rgba(0, 0, 0, 0.23);
-  --shadow-4-first: 0 14px 28px rgba(0, 0, 0, 0.25);
-  --shadow-4-second: 0 10px 10px rgba(0, 0, 0, 0.22);
-  --shadow-5-first: 0 19px 38px rgba(0, 0, 0, 0.3);
-  --shadow-5-second: 0 15px 12px rgba(0, 0, 0, 0.22);
-  --shadow-6-first: 0 -1px 2px 0 rgba(0, 0, 0, 0.2);
-  --shadow-7-first: 0 -1px 1.5px 0 rgba(0, 0, 0, 0.12);
-  --shadow-7-second: 0 1px 1px 0 rgba(0, 0, 0, 0.24);
-  --shadow-8-first: 0 1px 9.5px 0 rgba(0, 0, 0, 0.12);
-  --shadow-8-second: 0 2px 4px 0 rgba(0, 0, 0, 0.24);
-  --shadow-9-first: inset 0 -1px 3px 0 rgba(0, 0, 0, 0.1);
-  --shadow-9-second: inset 0 1px 1.5px 0 rgba(0, 0, 0, 0.2);
-  --shadow-9-third: inset 0 1px 1.5px 0 rgba(0, 0, 0, 0.25);
-  --shadow-10-first: 0 0 0 1px rgba(224, 230, 237, 0.5);
-  --shadow-11-first: 0 1px 0.5px rgba(0, 0, 0, 0.24);
-  --shadow-11-second: 0 -1px 0.75px rgba(0, 0, 0, 0.12);
-  --shadow-12-first: 0 0 1px rgba(0, 0, 0, 0.25);
-  --shadow-13-first: 0 0 1px rgba(0, 0, 0, 0.25);
-  --shadow-14-first: 0 0 0.5px rgba(0, 0, 0, 0.1);
-  --shadow-15-first: 0 2px 2px rgba(0, 0, 0, 0.24);
-  --shadow-15-second: 0 1px 4.75px rgba(0, 0, 0, 0.12);
   --font-family-default: 'Open Sans', sans-serif;
   --font-size-default: 1rem;
   --font-size-small: 0.9231rem;
